--- a/ChatClient/Views/FormWindow.xaml
+++ b/ChatClient/Views/FormWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:local="clr-namespace:ChatClient.Views"
         mc:Ignorable="d"
         Title="FormWindow" Height="400" Width="600"
-        Background="{DynamicResource MaterialDesignPaper}">
+        Background="{DynamicResource MaterialDesignPaper}"
+        WindowStartupLocation="CenterScreen">
     <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300">
             <!-- Title -->
